services/image_processing/kubernetes/image-processing.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-processing
  labels:
    app: image-processing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-processing
  template:
    metadata:
      labels:
        app: image-processing
    spec:
      containers:
      - name: image-processing
        image: IMAGE_NAME
        #image: registry.forge.hefr.ch/mse_pi/services/image_processing:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80 
      imagePullSecrets:
      - name: mysecretdeployer
