services/image_processing/kubernetes/image-processing.pod.yml
apiVersion: v1
kind: Pod
metadata:
  # This name uniquely identifies the pod
  name: image-processing-pod
  labels:
    app: image-processing
spec:
  containers:
  - name: image-processing
    image: csia-pme/image-processing
    # As we use the local image, there is no need to pull the image
    imagePullPolicy: Never
    ports:
    - name: http
      containerPort: 80
