services/image_processing/kubernetes/image-processing.stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  # This name uniquely identifies the stateful set
  name: image-processing-stateful
  labels:
    app: image-processing
spec:
  serviceName: image-processing
  replicas: 1
  selector:
    matchLabels:
      app: image-processing
  template:
    metadata:
      labels:
        app: image-processing
    spec:
      containers:
      - name: image-processing
        image: ghcr.io/csia-pme/csia-pme-image-processing:latest
        # If you build the image locally, change the next line to `imagePullPolicy: Never` - there is no need to pull the image
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
