services/image_processing/kubernetes/image-processing.service.yml
apiVersion: v1
kind: Service
metadata:
  name: image-processing-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8181
      targetPort: 80
      protocol: TCP
  selector:
    app: image-processing
